slurm_out/slurm.9670668.cip-ws-128.out
Traceback (most recent call last):
  File "<frozen runpy>", line 198, in _run_module_as_main
  File "<frozen runpy>", line 88, in _run_code
  File "/scratch/f/F.Conoscenti/Thesis_QSL/HFDS_Heisenberg/run_spin.py", line 43, in <module>
    from Elaborate.Error_Stat import *
  File "/scratch/f/F.Conoscenti/Thesis_QSL/Elaborate/Error_Stat.py", line 12
    ""graph = nk.graph.Hypercube(length=L, n_dim=2, pbc=True)
      ^^^^^
SyntaxError: invalid syntax
srun: error: cip-ws-128: task 0: Exited with exit code 1
srun: Terminating StepId=9670668.0
